--- a/assets/minecraft/mcpatcher/cit/staff/beth/beth.properties
+++ b/assets/minecraft/mcpatcher/cit/staff/beth/beth.properties
@@ -1,5 +1,5 @@
 type=item
 matchItems=wooden_sword
-nbt.display.Name=pattern:Beth
+nbt.display.Name=pattern:Phoenix
 nbt.display.Lore.*={Staff}
 texture=beth
