--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-bi.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-bi.properties
@@ -2,4 +2,4 @@ type=item
 matchItems=diamond_boots
 nbt.display.Name=pattern:Mithril Boots
 nbt.display.Lore.*={PvP}
-texture=mithril-b
+texture=m-b
