--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-ci.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-ci.properties
@@ -2,4 +2,4 @@ type=item
 matchItems=diamond_chestplate
 nbt.display.Name=pattern:Mithril Chestplate
 nbt.display.Lore.*={PvP}
-texture=mithril-c
+texture=m-c
