--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-h.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-h.properties
@@ -2,4 +2,4 @@ type=armor
 matchItems=diamond_helmet
 nbt.display.Name=pattern:Mithril Helmet
 nbt.display.Lore.*={PvP}
-texture=mithril-1
+texture=m-l1
