--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-hi.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-hi.properties
@@ -2,4 +2,4 @@ type=item
 matchItems=diamond_helmet
 nbt.display.Name=pattern:Mithril Helmet
 nbt.display.Lore.*={PvP}
-texture=mithril-h
+texture=m-h
