--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-li.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-li.properties
@@ -2,4 +2,4 @@ type=item
 matchItems=diamond_leggings
 nbt.display.Name=pattern:Mithril Leggings
 nbt.display.Lore.*={PvP}
-texture=mithril-l
+texture=m-l
