--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-b.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-b.properties
@@ -2,4 +2,4 @@ type=armor
 matchItems=diamond_boots
 nbt.display.Name=pattern:Mithril Boots
 nbt.display.Lore.*={PvP}
-texture=mithril-1
+texture=m-l
