--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-c.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-c.properties
@@ -2,4 +2,4 @@ type=armor
 matchItems=diamond_chestplate
 nbt.display.Name=pattern:Mithril Chestplate
 nbt.display.Lore.*={PvP}
-texture=mithril-1
+texture=m-l1
