--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-l.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/mitheral/mithril-l.properties
@@ -2,4 +2,4 @@ type=armor
 matchItems=diamond_leggings
 nbt.display.Name=pattern:Mithril Leggings
 nbt.display.Lore.*={PvP}
-texture=mithril-2
+texture=m-l2
