--- a/assets/minecraft/mcpatcher/cit/donor/Donor Legs.properties
+++ b/assets/minecraft/mcpatcher/cit/donor/Donor Legs.properties
@@ -1,5 +1,5 @@
 type=armor
 matchItems=diamond_leggings
-nbt.display.Name=pattern:Donor Legs
+nbt.display.Name=pattern:Donor Legggings
 nbt.display.Lore.*={Donor}
-texture=pants
+texture.diamond_layer_2=pants
