pack.mc update]

--- a/assets/minecraft/mcpatcher/cit/pvp armor/pvp/bronze/bronze_boots.properties
+++ b/assets/minecraft/mcpatcher/cit/pvp armor/pvp/bronze/bronze_boots.properties
@@ -2,4 +2,4 @@ type=item
 matchItems=iron_boots
 nbt.display.Name=pattern:Bronze Boots
 nbt.display.Lore.*={PvP}
-texture.iron_boots=b-b
+texture.iron_helmet=b-b
